CI UPDATED